# signal-scope

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  linkedin_post.md
sql/: init_duckdb.sql
src/: config.rs  lib.rs  logging.rs  main.rs
src/api/: mod.rs  routes.rs  types.rs
src/cli/: embed.rs  extract.rs  fetch.rs  mod.rs  normalize.rs  rank.rs  serve.rs  signal.rs  summarize.rs
src/data/: faers.rs  mod.rs  normalize.rs  pubmed.rs  store.rs
src/nlp/: embeddings.rs  features.rs  mod.rs  ner.rs  relclf.rs
src/signals/: bayes.rs  mod.rs  ror.rs  trend.rs
src/ui/: mod.rs
src/ui/static/: htmx.min.js  index.html  style.css
tests/: embed.rs  normalize.rs  rel_features.rs  ror_math.rs  smoke.rs
