[package]
name = "rwe-assistant"
version = "0.1.0"
edition = "2021"
authors = ["Signal Scope Contributors"]
description = "Rust-based toolkit for pharmacovigilance signal exploration"
license = "MIT"

[dependencies]
anyhow = "1"
arrow = "53"
askama = { version = "0.12", optional = true }
axum = { version = "0.7", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
dotenvy = "0.15"
duckdb = { version = "0.9", optional = true }
fastembed = { version = "5.2", optional = true }
linfa = "0.7"
linfa-logistic = "0.7"
parquet = "51"
polars = { version = "0.43", features = ["lazy", "parquet", "describe", "fmt", "temporal", "sql"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
urlencoding = "2.1"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
indexmap = "2"
serde_with = "3"
regex = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
ndarray = "0.15"
quick-xml = { version = "0.36", features = ["serialize"] }
once_cell = "1.19"
futures = "0.3"

[dependencies.ort]
version = "1.15"
optional = true
features = ["load-dynamic"]

[dependencies.tokenizers]
version = "0.14"
optional = true

[dependencies.llama_cpp_rs]
version = "0.3"
optional = true

[features]
default = ["askama"]
onx = ["ort", "tokenizers"]
embeddings = ["fastembed"]
duckdb = ["dep:duckdb"]
summaries = ["llama_cpp_rs"]

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.39", features = ["json"] }
proptest = "1.5"
tempfile = "3.10"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
